--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.6.3",
     "lottie-react": "^2.4.1",
     "motion": "^12.5.0",
     "pnpm": "^10.6.4",
