--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.3.0",
+    "sweetalert2": "^11.19.1",
     "swiper": "^11.2.5",
     "tailwindcss": "^4.0.14"
   },
