--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
-VITE_BASE_URL="http://localhost:5000"
+VITE_BASE_URL= http://localhost:5000
+
+# https://it-club-server.vercel.app 
+# http://localhost:5000 
 
 # firebase datas----------->
 VITE_apiKey=AIzaSyAqeKrV1L8wAoDUsBkqo5GC0UoH6Rxt9_Y
@@ -7,5 +10,4 @@ VITE_projectId=cpi-it-club
 VITE_storageBucket=cpi-it-club.firebasestorage.app
 VITE_messagingSenderId=174708327991
 VITE_appId=1:174708327991:web:67b167f640be15628261b2
-
-# VITE_imgbbApiKey=ca1d8160771e38600b30f7bd7e2369aa
+VITE_imgbbApiKey=ca1d8160771e38600b30f7bd7e2369aa
